examples/centralised-logging/kubeflow/virtualservice-elasticsearch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: elasticsearch
  namespace: logs
spec:
  gateways:
    - kubeflow-gateway.kubeflow.svc.cluster.local
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /elasticsearch/
      rewrite:
        uri: /
      route:
        - destination:
            host: elasticsearch-master
            port:
              number: 9200
