examples/centralised-logging/kubeflow/virtualservice-kibana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: logs
spec:
  gateways:
    - kubeflow-gateway.kubeflow.svc.cluster.local
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kibana/
      rewrite:
        uri: /
      route:
        - destination:
            host: kibana-kibana
            port:
              number: 5601
